[package]
name = "flytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
env_logger = "0.11.8"
log = "0.4.27"
rustwide = "0.19.4"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
